--- a/tansci-view/src/styles/element/index.scss
+++ b/tansci-view/src/styles/element/index.scss
@@ -1,6 +1,6 @@
 $--colors: (
     "primary": (
-        "base": green,
+        "base": #242e42,
     ),
     "success": (
         "base": #21ba45,
