--- a/tansci-view/src/styles/index.scss
+++ b/tansci-view/src/styles/index.scss
@@ -1,21 +1,42 @@
-// :root {
-//   --el-color-primary: red;
-// }
+:root {
+    // 主题
+    --theme: #242e42;
 
-body {
+    // 背景色
+    --bg1: #eff4f9;
+
+    // 文字颜色
+    --t1: #fff;
+    --t2: #f4f4f4;
+    --t3: #ededed;
+    --t4: #d8d8d8;
+    --t5: #b3b3b3;
+    --t6: #999;
+    --t7: #666;
+    --t8: #3d3d3d;
+    --t9: #181818;
+
+    // 操作颜色
+    --delete: #f56c6c;
+    --edit: #0084ff;
+    --add: #63ba4d;
+    --query: #909399;
+    --down: #E6A23C;
+    --upper: #67C23A;
+    --role: #006000;
+}
+
+#nprogress .bar {
+    /*自定义进度条颜色*/
+    background: var(--theme) !important;
+}
+
+html, body {
     font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
+    font-size: 14px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    padding: 0;
     margin: 0;
-}
-
-a {
-    color: var(--el-color-primary);
-}
-
-code {
-    border-radius: 2px;
-    padding: 2px 4px;
-    background-color: var(--el-color-primary-light-9);
-    color: var(--el-color-primary);
+    overflow: hidden;
 }
