--- a/tansci-view/src/styles/index.scss
+++ b/tansci-view/src/styles/index.scss
@@ -48,11 +48,12 @@ html, body {
  * Dialog 对话框
  */
 .el-dialog__header{
-    background-color: #242e42;
+    background-color: #F0F2F5;
     margin-right: 0;
     padding: 12px 20px;
     .el-dialog__title{
-        color: #fff;
+        color: var(--theme);
+        font-weight: 700;
     }
 }
 /**
@@ -62,7 +63,7 @@ html, body {
     .search-wrap{
         display: flex;
         flex-wrap: wrap;
-        background: var(--bg1);
+        // background: var(--bg1);
     }
     .search-wrap>div{
         line-height: 40px;
